--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <title>Personal Translations</title>
+    <title>DirectDrinks Admin</title>
 </head>
 
 <body>
